Submit and cancel id's

--- a/app/views/accounting/createclosure.html
+++ b/app/views/accounting/createclosure.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="offset3">
-        <a href="#/accounts_closure"><button type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
-        <button type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
+        <a href="#/accounts_closure"><button id="cancel" type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
+        <button id="submit" type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
     </div>
 </form>
