--- a/app/views/accounting/edit_acc_rule.html
+++ b/app/views/accounting/edit_acc_rule.html
@@ -88,8 +88,8 @@
             </div>
           </div>
           <div class="offset3">
-            <a href="#/viewaccrule/{{accountingRuleId}}"><button type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
-            <button type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
+            <a href="#/viewaccrule/{{accountingRuleId}}"><button id="cancel" type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
+            <button  id="submit" type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
           </div>
         </fieldset>
       </form>
