--- a/app/views/administration/editpermissions.html
+++ b/app/views/administration/editpermissions.html
@@ -42,7 +42,7 @@
 	</table>
 
 	<div class="offset3">
-		<a href="#/admin/viewrole/{{role.id}}"><button type="reset" class="btn">{{ 'button.cancel' | translate}}</button></a>
-		<button type="submit" class="btn btn-primary">{{ 'button.save' | translate}}</button>
+		<a href="#/admin/viewrole/{{role.id}}"><button id="cancel" type="reset" class="btn">{{ 'button.cancel' | translate}}</button></a>
+		<button id="submit" type="submit" class="btn btn-primary">{{ 'button.save' | translate}}</button>
 	</div>
 </form>
