--- a/app/views/import/uploadfile.html
+++ b/app/views/import/uploadfile.html
@@ -54,8 +54,8 @@
          </table>
 
           <div class="offset3">
-            <a href="#/importing"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <a href="#/importing"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
