--- a/app/views/organization/createEvent.html
+++ b/app/views/organization/createEvent.html
@@ -141,8 +141,8 @@
 		</table>
 		
 		<div class="offset3">
-			<a href="#/event"><button type="reset" class="btn">Cancel</button></a>
-			<button type="submit" class="btn btn-primary">Save</button>
+			<a href="#/event"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+			<button  id="submit" type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
 </form>
