--- a/app/views/organization/createRegions.html
+++ b/app/views/organization/createRegions.html
@@ -111,8 +111,8 @@
 		
 		
 		<div class="offset3">
-			<a href="#/regions"><button type="reset" class="btn">Cancel</button></a>
-			<button type="submit" class="btn btn-primary">Save</button>
+			<a href="#/regions"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+			<button id="submit" type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
 </form>
