--- a/app/views/organization/createchargecode.html
+++ b/app/views/organization/createchargecode.html
@@ -73,8 +73,8 @@
           </div>
 
           <div class="offset3">
-            <a href="#/chargecode"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <a href="#/chargecode"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button  id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
