--- a/app/views/organization/currencyconfig.html
+++ b/app/views/organization/currencyconfig.html
@@ -43,8 +43,8 @@
     			<input disabled="" class="form-control input-xxlarge" placeholder={{currency.displayLabel}}} type="text"/>&nbsp;&nbsp;<a ng-click='deleteCur(currency.code)'><i class="icon-remove"></i></a>
             </div>
             <div class="offset5">
-                <button type="reset" ng-click="cancel()" class="btn">Cancel</button>
-                <button type="submit" ng-click="submit()" class="btn btn-primary">Save</button>
+                <button id="cancel" type="reset" ng-click="cancel()" class="btn">Cancel</button>
+                <button id="submit" type="submit" ng-click="submit()" class="btn btn-primary">Save</button>
             </div>
         </div>  
     </div>
