--- a/app/views/organization/editchargecode.html
+++ b/app/views/organization/editchargecode.html
@@ -74,8 +74,8 @@
           </div>
           
           <div class="offset3">
-            <a href="#/viewchargecode/{{chargeCodeId}}"><button type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
+            <a href="#/viewchargecode/{{chargeCodeId}}"><button id="cancel" type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
+            <button  id="submit" type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
           </div>
         </fieldset>
       </form>
