--- a/app/views/organization/edittaxmapping.html
+++ b/app/views/organization/edittaxmapping.html
@@ -65,8 +65,8 @@
           </div>
           
           <div class="offset3">
-            <a href="#/viewtaxmapping/{{taxMapId}}"><button type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
+            <a href="#/viewtaxmapping/{{taxMapId}}"><button id="cancel" type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
           </div>
         </fieldset>
       </form>
