--- a/app/views/system/addcode.html
+++ b/app/views/system/addcode.html
@@ -20,8 +20,8 @@
             </div>
         </div><br>
         <div class="offset3">
-            <a href="#/codes"><button class="btn">{{'label.cancel' | translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
+            <a href="#/codes"><button id="cancel" class="btn">{{'label.cancel' | translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
         </div>
 
     </fieldset>
