--- a/app/views/system/createServiceMapping.html
+++ b/app/views/system/createServiceMapping.html
@@ -51,8 +51,8 @@
      
          
           <div class="offset3">
-            <a href="#/mappingconfig"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <a href="#/mappingconfig"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
