--- a/app/views/system/createdatatable.html
+++ b/app/views/system/createdatatable.html
@@ -97,8 +97,8 @@
             </tr>
           </table>
           <div class="offset3">
-            <a href="#/datatables"><button type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
-            <button type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
+            <a href="#/datatables"><button id="cancel" type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
           </div>
         </fieldset>
       </form>
