--- a/app/views/system/editServiceMapping.html
+++ b/app/views/system/editServiceMapping.html
@@ -49,8 +49,8 @@
           </div>
          
           <div class="offset3">
-            <a href="#/viewServiceMapping/{{serviceMappingId}}"><button type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
+            <a href="#/viewServiceMapping/{{serviceMappingId}}"><button id="cancel" type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
           </div>
         </fieldset>
       </form>
