--- a/app/views/system/editreport.html
+++ b/app/views/system/editreport.html
@@ -108,8 +108,8 @@
     </table>
   </div>
   <div class="offset6">
-    <a href="#/system/viewreport/{{reportdetail.id}}"><button type="reset" class="btn">Cancel</button></a>
-    <button type="submit" class="btn btn-primary" ng-click="submit()">{{'button.save' | translate}}</button>
+    <a href="#/system/viewreport/{{reportdetail.id}}"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+    <button id="submit" type="submit" class="btn btn-primary" ng-click="submit()">{{'button.save' | translate}}</button>
   </div>
 </form>
     
