--- a/app/views/accounting/add_acc_rule.html
+++ b/app/views/accounting/add_acc_rule.html
@@ -87,8 +87,8 @@
       </div>
     </div>
     <div class="offset3">
-      <a href="#/accounting_rules"><button type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
-      <button type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
+      <a href="#/accounting_rules"><button id="cancel" type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
+      <button id="submit" type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
     </div>
   </fieldset>
 </form>
