--- a/app/views/accounting/createglaccounting.html
+++ b/app/views/accounting/createglaccounting.html
@@ -102,8 +102,8 @@
 
           
           <div class="offset3">
-            <a href="#/accounting_coa"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="#/accounting_coa"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
           
         </fieldset>
