--- a/app/views/accounting/editglaccounting.html
+++ b/app/views/accounting/editglaccounting.html
@@ -102,8 +102,8 @@
 
       
       <div class="offset3">
-        <a href="#/viewglaccount/{{glAccountId}}"><button type="reset" class="btn">Cancel</button></a>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <a href="#/viewglaccount/{{glAccountId}}"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+        <button id="submit" type="submit" class="btn btn-primary">Save</button>
       </div>
       
     </fieldset>
