--- a/app/views/accounting/journalentry_posting.html
+++ b/app/views/accounting/journalentry_posting.html
@@ -89,8 +89,8 @@
             </div>
           </div>
           <div class="offset3">
-            <a href="#/accounting"><button type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
-            <button type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
+            <a href="#/accounting"><button id="cancel" type="reset" class="btn">{{ 'label.cancel' | translate }}</button></a>
+            <button  id="submit" type="submit" class="btn btn-primary">{{ 'label.save' | translate }}</button>
           </div>
         </fieldset>
       </form>
