--- a/app/views/administration/addrole.html
+++ b/app/views/administration/addrole.html
@@ -24,8 +24,8 @@
 		</div>
 
 		<div class="offset3">
-			<a href="#/admin/roles"><button type="reset" class="btn">{{'button.cancel' | translate}}</button></a>
-			<button type="submit" class="btn btn-primary">{{'button.save' | translate}}</button>
+			<a href="#/admin/roles"><button id="cancel" type="reset" class="btn">{{'button.cancel' | translate}}</button></a>
+			<button id="submit" type="submit" class="btn btn-primary">{{'button.save' | translate}}</button>
 		</div>
 	</fieldset>
 </form>
