--- a/app/views/organization/createContract.html
+++ b/app/views/organization/createContract.html
@@ -41,8 +41,8 @@
           
 
           <div class="offset3">
-            <a href="#/contract"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <a href="#/contract"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
