--- a/app/views/organization/createPlan.html
+++ b/app/views/organization/createPlan.html
@@ -164,8 +164,8 @@
           </tr>
           </table>
           <div class="offset3">
-            <a href="#/plans"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="#/plans"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
