--- a/app/views/organization/creatediscounts.html
+++ b/app/views/organization/creatediscounts.html
@@ -82,8 +82,8 @@
 			</table>
   			
           <div class="offset3">
-            <a href="#/discounts"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <a href="#/discounts"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
