--- a/app/views/organization/createemployee.html
+++ b/app/views/organization/createemployee.html
@@ -46,8 +46,8 @@
           </div>
 
           <div class="offset3">
-            <a href="#/employees"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <a href="#/employees"><button  id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
