--- a/app/views/organization/createmedia.html
+++ b/app/views/organization/createmedia.html
@@ -268,8 +268,8 @@
            </fieldset>
 
           <div class="offset3">
-            <a href="#/media"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="#/media"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
