--- a/app/views/organization/createoffice.html
+++ b/app/views/organization/createoffice.html
@@ -57,7 +57,7 @@
           </table>
           <div class="offset3">
             <a href="#/offices"><button id="cancel" type="reset" class="btn">Cancel</button></a>
-            <button id="save" type="submit" class="btn btn-primary">Save</button>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
