--- a/app/views/organization/createservice.html
+++ b/app/views/organization/createservice.html
@@ -68,8 +68,8 @@
             </tr>
           </table>
           <div class="offset3">
-            <a href="#/services"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="#/services"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
