--- a/app/views/organization/createvoucherpin.html
+++ b/app/views/organization/createvoucherpin.html
@@ -105,8 +105,8 @@
                         	</div>
           	</div>
           <div class="offset3">
-            <a href="#/voucherpins"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+            <a href="#/voucherpins"><button id="cancel" type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button  id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
