--- a/app/views/organization/editContract.html
+++ b/app/views/organization/editContract.html
@@ -48,8 +48,8 @@
             </tr>
           </table>
           <div class="offset3">
-            <a href="#/contract"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="#/contract"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
