--- a/app/views/organization/editRegions.html
+++ b/app/views/organization/editRegions.html
@@ -114,8 +114,8 @@
 		
 		
 		<div class="offset3">
-			<a href="#/viewregions/{{formData.id}}"><button type="reset" class="btn">Cancel</button></a>
-			<button type="submit" class="btn btn-primary">Save</button>
+			<a href="#/viewregions/{{formData.id}}"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+			<button  id="submit" type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
 </form>
