--- a/app/views/organization/editdiscounts.html
+++ b/app/views/organization/editdiscounts.html
@@ -83,8 +83,8 @@
 			</table>
  
           <div class="offset3">
-            <a href="#/viewdiscounts/{{discountdetail.discountMasterId}}"><button type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
+            <a href="#/viewdiscounts/{{discountdetail.discountMasterId}}"><button id="cancel" type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
           </div>
         </fieldset>
       </form>
