--- a/app/views/organization/editemployee.html
+++ b/app/views/organization/editemployee.html
@@ -48,8 +48,8 @@
           </div>
           
           <div class="offset3">
-            <a href="#/viewemployee/{{staffId}}"><button type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
-            <button type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
+            <a href="#/viewemployee/{{staffId}}"><button  id="cancel" type="reset" class="btn">{{'label.cancel' | translate}}</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
           </div>
         </fieldset>
       </form>
