--- a/app/views/organization/editmedia.html
+++ b/app/views/organization/editmedia.html
@@ -213,8 +213,8 @@
               </tr>
            </table>
           <div class="offset3">
-            <a href="#/viewmedia/{{formData.mediaId}}"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="#/viewmedia/{{formData.mediaId}}"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
