--- a/app/views/organization/editmessage.html
+++ b/app/views/organization/editmessage.html
@@ -111,8 +111,8 @@
 			</tr>
 		</table>
 		<div class="offset3">
-			<a href="#/viewmessage/{{formData.id}}"><button type="reset" class="btn">Cancel</button></a>
-			<button type="submit" class="btn btn-primary">Save</button>
+			<a href="#/viewmessage/{{formData.id}}"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+			<button id="submit" type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
 </form>
