--- a/app/views/organization/editplan.html
+++ b/app/views/organization/editplan.html
@@ -153,8 +153,8 @@
           </tr>
           </table>
           <div class="offset3">
-            <a href="#/viewplan/{{formData.id}}"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="#/viewplan/{{formData.id}}"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
