--- a/app/views/organization/editprice.html
+++ b/app/views/organization/editprice.html
@@ -84,8 +84,8 @@
           </table>
       
           <div class="offset3">
-            <a href="#/viewprice/{{formData.priceId}}/{{formData.planId}}"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <a href="#/viewprice/{{formData.priceId}}/{{formData.planId}}"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+            <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
       </form>
