--- a/app/views/savings/edit_saving_account_application.html
+++ b/app/views/savings/edit_saving_account_application.html
@@ -158,8 +158,8 @@
         </table>
       </div>
       <div class="offset4">
-        <button ng-click="cancel()" class="btn">Cancel</button>
-        <button type="submit" class="btn btn-primary" ng-show="!isCollapsed">Save</button>
+        <button id="cancel" ng-click="cancel()" class="btn">Cancel</button>
+        <button  id="submit" type="submit" class="btn btn-primary" ng-show="!isCollapsed">Save</button>
       </div>
      
     </fieldset>
