--- a/app/views/system/createreport.html
+++ b/app/views/system/createreport.html
@@ -119,8 +119,8 @@
     </table>
   </div>
   <div class="offset6">
-     <a href="#/reports"><button type="reset" class="btn">Cancel</button></a>
-    <button type="submit" class="btn btn-primary" ng-click="submit()">{{'button.save' | translate}}</button>
+     <a href="#/reports"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+    <button id="submit" type="submit" class="btn btn-primary" ng-click="submit()">{{'button.save' | translate}}</button>
   </div>
 </form>
     
