--- a/app/views/system/editjobparameters.html
+++ b/app/views/system/editjobparameters.html
@@ -101,8 +101,8 @@
                    </div>
            </div>
 	      <div class="offset3">
-	        <button type="reset" ng-click="cancel()" class="btn">{{'label.cancel' | translate}}</button></a>
-	        <button type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
+	        <button  id="cancel" type="reset" ng-click="cancel()" class="btn">{{'label.cancel' | translate}}</button></a>
+	        <button id="submit" type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
 	      </div>
 	    </fieldset>
   </form>
