--- a/app/views/prospects/followprospects.html
+++ b/app/views/prospects/followprospects.html
@@ -56,7 +56,7 @@
          
           <div class="offset3">
             <a href="#/viewprospects/{{prospectsData.id}}"><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
-            <button type="submit" class="btn btn-primary" ng-disabled="disable">{{'button.save'| translate}}</button>
+            <button type="submit" class="btn btn-primary" ng-disabled="flag">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
