--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -77,13 +77,14 @@
                 <tbody>
                     <tr ng-repeat="item in pagedItems[currentPage] | orderBy:sortingOrder:reverse"  ng-show="item.isPrepaid == 'N'">
                         <td >
-                       <input type="radio" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
+                       <input type="radio" id="{{item.id}}" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
                        </td>
-                        <td ng-show="item.isPrepaid == 'N'">{{item.planCode}}-
+                        <td ng-show="item.isPrepaid == 'N'"><label for="{{item.id}}" >{{item.planCode}}-
                          <any ng-repeat="services in item.availableServices">
                          {{services.serviceDescription}} 
                          <any ng-show="services">,</any>
-                        
+                         </any>
+                        </label>
                          <td>
                         </td>
                         
@@ -124,13 +125,14 @@
                 <tbody>
                     <tr ng-repeat="item in prepaidPlanspagedItems[currentPage] | orderBy:sortingOrder:reverse " ng-show="item.isPrepaid == 'Y'">
                         <td >
-                       <input type="radio" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
+                       <input type="radio" id="{{item.id}}" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
                        </td>
-                        <td ng-show="item.isPrepaid == 'Y'">{{item.planCode}}-
+                        <td ng-show="item.isPrepaid == 'Y'"><label for="{{item.id}}" >{{item.planCode}}-
                          <any ng-repeat="services in item.availableServices">
                          {{services.serviceDescription}} 
                          <any>,</any>
                         </any>
+                        </label>
                          <td>
                         </td>
                         
@@ -171,7 +173,7 @@
             </tr>
           </table>
      
-          <div class="offset3">
+          <div class="pull-right">
             
                <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
            <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">Save</button>
