--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -58,7 +58,7 @@
                 <tfoot>
                     <td colspan="2">
                         <div class="pagination pull-right">
-                            <ul>
+                            <ul >
                                 <li ng-class="{disabled: currentPage == 0}">
                                     <a href ng-click="prevPage()" class="icon-chevron-left"></a>
                                 </li>
@@ -75,11 +75,11 @@
                     </td>
                 </tfoot>
                 <tbody>
-                    <tr ng-repeat="item in pagedItems[currentPage] | orderBy:sortingOrder:reverse"  ng-show="item.isPrepaid == 'N'">
-                        <td >
-                       <input type="radio" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
+                    <tr ng-repeat="item in pagedItems[currentPage] | orderBy:sortingOrder:reverse"  ng-show="item.isPrepaid == 'N'" STYLE="cursor:pointer;">
+                        <td  >
+                       <input id="plancode" type="radio" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
                        </td>
-                        <td ng-show="item.isPrepaid == 'N'">{{item.planCode}}-
+                        <td   ng-show="item.isPrepaid == 'N'" ng-click='setBillingFrequency(item.id)' active-link="active">{{item.planCode}}-
                          <any ng-repeat="services in item.availableServices">
                          {{services.serviceDescription}} 
                          <any ng-show="services">,</any>
@@ -123,10 +123,10 @@
                 </tfoot> -->
                 <tbody>
                     <tr ng-repeat="item in prepaidPlanspagedItems[currentPage] | orderBy:sortingOrder:reverse " ng-show="item.isPrepaid == 'Y'">
-                        <td >
-                       <input type="radio" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
-                       </td>
-                        <td ng-show="item.isPrepaid == 'Y'">{{item.planCode}}-
+                        <td  cursor="pointer">
+                       <label><input  cursor="pointer"type="radio" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'/>{{plandata.planCode}}
+                       </label> </td>
+                        <td  cursor="pointer" name="planCode" ng-show="item.isPrepaid == 'Y'">{{item.planCode}}-
                          <any ng-repeat="services in item.availableServices">
                          {{services.serviceDescription}} 
                          <any>,</any>
