--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -1117,7 +1117,7 @@
                     		</div>
 						</div> 
                 		<div class="control-group">
-                  			<label class="control-label">{{ 'label.remark' | translate }}</label>
+                  			<label class="control-label">{{ 'label.Promotionalmessage' | translate }}</label>
                   			<div class="controls">
                   				<textarea  ng-model="formData.message" style="width: 333px; height: 126px;"></textarea>
                   			</div>
