--- a/app/views/help.html
+++ b/app/views/help.html
@@ -23,37 +23,30 @@
             <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.tasks' | translate}}</td>
             <td><span class="padded-td">ctrl + shift + <span class="hotkey">i</span></span></td>
         </tr>
-        <tr>
-            <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.collectionsheet' | translate}}</td>
-            <td><span class="padded-td">ctrl + shift + <span class="hotkey">o</span></span></td>
-        </tr>
+      
         <tr>
             <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.createclient' | translate}}</td>
             <td><span class="padded-td">ctrl + shift + <span class="hotkey">c</span></span></td>
         </tr>
-        <tr>
-            <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.creategroup' | translate}}</td>
-            <td><span class="padded-td">ctrl + shift + <span class="hotkey">g</span></span></td>
+         <tr>
+            <td style="font-weight: normal" class="table-bold-acc">{{'label.inventory' | translate}}</td>
+            <td><span class="padded-td">alt + <span class="hotkey">n</span></span></td>
         </tr>
-        <tr>
-            <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.createcenter' | translate}}</td>
-            <td><span class="padded-td">ctrl + shift + <span class="hotkey">q</span></span></td>
+          <tr>
+            <td style="font-weight: normal" class="table-bold-acc">{{'label.createplan' | translate}}</td>
+            <td><span class="padded-td">ctrl + shift + <span class="hotkey">p</span></span></td>
         </tr>
-        <tr>
-            <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.frequentposting' | translate}}</td>
-            <td><span class="padded-td">ctrl + shift + <span class="hotkey">f</span></span></td>
-        </tr>
-        <tr>
-            <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.closureentries' | translate}}</td>
-            <td><span class="padded-td">ctrl + shift + <span class="hotkey">e</span></span></td>
-        </tr>
-        <tr>
-            <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.journalentry' | translate}}</td>
-            <td><span class="padded-td">ctrl + shift + <span class="hotkey">j</span></span></td>
+       <tr>
+            <td style="font-weight: normal" class="table-bold-acc">{{'label.createservice' | translate}}</td>
+            <td><span class="padded-td">ctrl + shift + <span class="hotkey">s</span></span></td>
         </tr>
         <tr>
             <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.reports' | translate}}</td>
             <td><span class="padded-td">ctrl + shift + <span class="hotkey">r</span></span></td>
+        </tr>
+         <tr>
+            <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.uploads' | translate}}</td>
+            <td><span class="padded-td">ctrl + shift + <span class="hotkey">u</span></span></td>
         </tr>
         <tr>
             <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.accounting' | translate}}</td>
@@ -78,6 +71,10 @@
         <tr>
             <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.search' | translate}}</td>
             <td><span class="padded-td"><span class="hotkey">alt + x</span></span></td>
+        </tr>
+         <tr>
+            <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.smartsearch' | translate}}</td>
+            <td><span class="padded-td"><span class="hotkey">alt + f</span></span></td>
         </tr>
         <tr>
             <td style="font-weight: normal" class="table-bold-acc">{{'label.heading.help' | translate}}</td>
