--- a/app/views/messanger.html
+++ b/app/views/messanger.html
@@ -9,7 +9,7 @@
     <div>
       <tabset  style="margin-bottom: 0px;">
       
-      <tab heading="Inbox" select="getsupplierdetails()">
+      <tab heading="Inbox" select="updateRead()">
       
        
         <div ng-repeat="userChatData in userChatDatas | orderBy:predicate:reverse">
