--- a/app/views/clients/createorderwizard.html
+++ b/app/views/clients/createorderwizard.html
@@ -44,13 +44,13 @@
                 <tbody>
                     <tr ng-repeat="item in pagedItems[currentPage] | orderBy:sortingOrder:reverse"  ng-show="item.isPrepaid == 'N'">
                         <td >
-                       <input type="radio" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
+                       <input type="radio" id="{{item.id}}" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
                        </td>
-                        <td ng-show="item.isPrepaid == 'N'">{{item.planCode}}-
+                        <td ng-show="item.isPrepaid == 'N'"><label for="{{item.id}}" >{{item.planCode}}-
                          <any ng-repeat="services in item.availableServices">
                          {{services.serviceDescription}} 
                          <any ng-show="services">,</any>
-                        
+                        </label>
                          <td>
                         </td>
                         
@@ -91,13 +91,14 @@
                 <tbody>
                     <tr ng-repeat="item in prepaidPlanspagedItems[currentPage] | orderBy:sortingOrder:reverse " ng-show="item.isPrepaid == 'Y'">
                         <td >
-                       <input type="radio" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
+                       <input type="radio" id="{{item.id}}" name="planCode" value="item.id" ng-click='setBillingFrequency(item.id)'>{{plandata.planCode}}
                        </td>
-                        <td ng-show="item.isPrepaid == 'Y'">{{item.planCode}}-
+                        <td ng-show="item.isPrepaid == 'Y'"><label for="{{item.id}}" >{{item.planCode}}-
                          <any ng-repeat="services in item.availableServices">
                          {{services.serviceDescription}} 
                          <any>,</any>
                         </any>
+                        </label>
                          <td>
                         </td>
                         
