--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -161,7 +161,7 @@
            </td>
            </tr>
            </table> 
-            <div class="offset3">
+            <div class="pull-right">
               <a href="#/clients"><button id="cancel" type="reset" class="btn">Cancel</button></a>
               <button id="submit" type="submit"  ng-dblclick="dbClick()" ng-disabled="(!createclientform.$valid)||(flag)" class="btn btn-primary">Save</button>
             </div>
