--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -1,6 +1,7 @@
 <div ng-controller="ViewClientController">
+
   <ul class="breadcrumb">
-        <li>
+     <!--    <li>
           <img ng-hide="client.imagePresent" src="../app/images/blank_avatar.jpg" alt="Avatar" width="40">
           <img ng-show="client.imagePresent" src="{{image}}" alt="Avatar" width="40">
         </li>
@@ -12,20 +13,75 @@
             <i class="icon-circle {{client.status.value | StatusLookup}}"></i>
             &nbsp;
           </h3>
-        </li>
-        <li><span class="divider">|</span>
-       <!--    <i class="icon-barcode"></i> -->
-          <small>Uniquely identified  {{client.accountNo}}&nbsp;</small>
-        </li>
-        <li><span class="divider">|</span>
+        </li> -->
+         <!-- style="font-weight:bold" -->
+        
+      <!--   <li><span class="divider">|</span>
+          <small>Uniquely identified  {{client.accountNo}}</small>
+          </br>&nbsp;&nbsp;&nbsp;
           <i class="icon-building"></i>
           <small>Office "{{client.officeName}}"</small>
         </li>
+        <li><span class="divider">|</span>
+          
+          <small>Cell Phone {{client.phone}}</small>
+                    </br>&nbsp;&nbsp;&nbsp;
+          <small>Mail him {{client.email}}</small>
+        </li> 
          <li><span class="divider">|</span>
           <i></i>
+          <small>Client Type "{{client.categoryType}}"</small>
+          </br>&nbsp;&nbsp;&nbsp;
           <small>Balance&nbsp;{{client.balanceAmount}}&nbsp;{{client.currency}} </small>
-        </li>
+        </li> -->
+        <table>
+        <tr>
+        <td>
+        	 <img ng-hide="client.imagePresent" src="../app/images/blank_avatar.jpg" alt="Avatar" width="40">
+          <img ng-show="client.imagePresent" src="{{image}}" alt="Avatar" width="40">
+        </td>
+        <td>
+            <small style="color:black;">{{client.displayName}}</small>
+            &nbsp;
+            <i class="icon-circle {{client.status.value | StatusLookup}}"></i>
+        </td>
+        <td><small style="font-size:30px;">|</small></td>
+        <td>
+        <table>
+        	<tr>
+        		<td><small>Uniquely identified  {{client.accountNo}}</small></td>
+        	</tr>
+        	<tr>
+        		<td><i class="icon-building"></i><small>Office "{{client.officeName}}"</small></td>
+        	</tr>
+        </table>
+        </td>
+        <td><small style="font-size:30px;">|</small></td>
+        <td>
+        <table>
+        	<tr>
+        		<td><small>Cell Phone {{client.phone}}</small></td>
+        	</tr>
+        	<tr>
+        		<td><small>Mail him {{client.email}}</small></td>
+        	</tr>
+        </table>
+        </td>
+        <td><small style="font-size:30px;">|</small></td>
+        <td>
+        <table>
+        	<tr>
+        		<td><small>Client Type "{{client.categoryType}}"</small></td>
+        	</tr>
+        	<tr>
+        		<td><small>Balance&nbsp;{{client.balanceAmount}}&nbsp;{{client.currency}} </small></td>
+        	</tr>
+        </table>
+        </td>
+        </tr>
+        </table>
   </ul>
+  
     <div>
       <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
