reports changes,added address manage

--- a/app/views/administration/organization.html
+++ b/app/views/administration/organization.html
@@ -37,7 +37,10 @@
 	      <h4 class="list-group-item-heading"><i class="icon-briefcase icon-large"></i>&nbsp;&nbsp;Currency Details</h4>
 	      <p class="list-group-item-text">A Currency Details</p>
 	    </a>
-	    
+	    <a class="list-group-item" href="#/addressmanage">
+	      <h4 class="list-group-item-heading"><i class="icon-list icon-large"></i>&nbsp;&nbsp;Manage Addresses</h4>
+	      <p class="list-group-item-text"></p>
+	    </a>
 	    
 	  </div>    
   </div>
