--- a/app/views/administration/organization.html
+++ b/app/views/administration/organization.html
@@ -39,7 +39,7 @@
 	    </a>
 	    <a class="list-group-item" href="#/addressmanage">
 	      <h4 class="list-group-item-heading"><i class="icon-list icon-large"></i>&nbsp;&nbsp;Manage Addresses</h4>
-	      <p class="list-group-item-text"></p>
+	      <p class="list-group-item-text">For Country,State,and City</p>
 	    </a>
 	    
 	  </div>    
