--- a/app/views/messanger.html
+++ b/app/views/messanger.html
@@ -16,8 +16,11 @@
         </div>
         <div ng-repeat="userChatData in userChatDatas | orderBy:predicate:reverse">
           <div>
-           
-              <p>{{userChatData.message}}</p>
+           	  <p>&nbsp;</p>
+              <p>{{userChatData.message}}
+              		<button type="button" class="btn btn-success flag pull-right" data-ng-hide="userChatData.isRead" data-ng-click="updateFlag(userChatData.id)"><i class="icon-flag-alt"></i></button>
+                	<button type="button" class="btn btn-danger flag pull-right" data-ng-show="userChatData.isRead"><i class="icon-remove"></i></button></p>
+              </p>
               <blockquote>
             
                <small>From :&nbsp;{{userChatData.createdByUser}}  Received on :&nbsp;&nbsp;{{userChatData.messageDate | DateFormat}}</small>
