--- a/app/views/system/schedulerjobs.html
+++ b/app/views/system/schedulerjobs.html
@@ -1,18 +1,14 @@
 <div class="paddedbottom10">
-    <div class="paddedbottom10">
-        <ul class="breadcrumb">
-            <li><a href="#/system">{{'link.admin.system' | translate}}</a> <span class="divider">/</span></li>
-            <li class="active">{{'label.manageschedulerjobs' | translate}}</li>
-        </ul>
-</div>
-</div>
+ </div>
 <div class="row-fluid" ng-controller="SchedulerJobsController">
     <table>
         <tr>
             <td><h3>{{'label.schedulerstatus' | translate}}&nbsp;:&nbsp;{{schedulerstatus}}</h3></td>
             <td></td>
-            <td><button class="btn" ng-show="schedulerstatus=='Active'" ng-click="suspendJobs()">Suspend</button></td>
-            <td><button class="btn" ng-show="schedulerstatus=='Standby'" ng-click="activeJobs()">Active</button></td>
+             <td>
+                <button class="btn-warning" ng-show="schedulerstatus=='Active'" ng-click="suspendJobs()"><i class="icon-remove icon-white"></i>{{'label.button.suspend' | translate}}</button>
+                <button class="btn-success" ng-show="schedulerstatus=='Standby'" ng-click="activeJobs()"><i class="icon-check-sign icon-white"></i>{{ 'label.button.activate' | translate }}</button>
+            </td>
         </tr>
     </table>
     <table ng-show="sentForExecution">
@@ -45,10 +41,10 @@
                 <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.displayName}}</td>
                 <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.active}}</td>
                 <td><input type="checkbox" class="changeStatus" ng-model="job.active" id="changeStatus" ng-click="selectAll(job)"/></td>
-                <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.nextRunTime | DateFormat}}</td>
-                <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.lastRunHistory.jobRunStartTime | DateFormat}}</td>
-                <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.lastRunHistory.jobRunStartTime| DateFormat}}</td>
-                <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.currentlyRunning}}</td>
+                <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.nextRunTime}}</td>
+                <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.lastRunHistory.jobRunEndTime}}</td>
+                <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.lastRunHistory.status}}</td>
+                <td class="pointer" data-ng-click="routeTo(job.jobId)">{{job.currentlyRunning | YesOrNo}}</td>
 		        <td><a href="#/editschedulerjob/{{job.jobId}}" style='color:#000000' popover="Edit" popover-trigger="mouseenter" ><i class="icon-edit"></i></a></td>
           		<td><a  ng-hide="job.displayName == 'Requestor' || job.displayName =='Responser' || job.displayName =='PushNotification'" href="#/editjobparameters/{{job.jobId}}" style='color:#000000' popover="Edit Job Parameter" popover-trigger="mouseenter"><i class="icon-book"></i></a></td>
           		<td><a href="#/viewhistory/{{job.jobId}}" style='color:#3104B4' popover="View History" popover-trigger="mouseenter"><i class="icon-search"></a></td>
