--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -691,7 +691,7 @@
                   					<any>{{financialtransaction.amount}}</any>
               					</td>
               						<td>
-                					<a ng-hide="financialtransaction.flag=='false'" ng-click="cancelPayment(financialtransaction.transactionId)" popover="Cancel Payment" popover-trigger="mouseenter"><i class="icon-remove-circle icon-white"></i></a>
+                					<a ng-hide="financialtransaction.flag==true" ng-click="cancelPayment(financialtransaction.transactionId)" popover="Cancel Payment" popover-trigger="mouseenter"><i class="icon-remove-circle icon-white"></i></a>
               					</td>
             				</tr>
 						</tbody>
