--- a/app/views/prospects/createprospects.html
+++ b/app/views/prospects/createprospects.html
@@ -176,7 +176,7 @@
 												<div class="control-group">
             									<label class="control-label" for="city">{{ 'label.city/district' | translate }}<span class="required">*</span></label>
             									<div class="controls">
-             					 				<input type="text" id="city" name="city" ng-model="formData.city" list="citylist">
+             					 				<input type="text" id="city" name="city" ng-model="formData.city" list="citylist" ng-change="getStateAndCountry(formData.city)">
             									</div>
           										</div>
           						
