--- a/app/views/inventory/addgrndetails.html
+++ b/app/views/inventory/addgrndetails.html
@@ -1,10 +1,11 @@
+  <div ng-controller="AddGRNController">  
       <div>
         <ul class="breadcrumb">
-          <li><a href="#/inventory" select="getGRNdetails()">{{'link.admin.inventory' | translate}}</a> <span class="divider">/</span></li>
+          <li><a href="#/inventory" ng-click="selectedGRN()" select="getGRNdetails()">{{'link.admin.inventory' | translate}}</a> <span class="divider">/</span></li>
           <li class="active">{{'label.create.new.addgrn' | translate}}</li>
         </ul>
       </div>
-      <form class="form-horizontal well" ng-controller="AddGRNController" ng-submit="submit()">
+      <form class="form-horizontal well" ng-submit="submit()">
        <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
@@ -63,3 +64,4 @@
           
         </fieldset>
       </form>
+ </div>
