--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -163,7 +163,8 @@
            </table> 
             <div class="pull-right">
               <a href="#/clients"><button id="cancel" type="reset" class="btn">Cancel</button></a>
-              <button id="submit" type="submit"  ng-dblclick="dbClick()" ng-disabled="(!createclientform.$valid)||(flag)" class="btn btn-primary">Save</button>
+              <!-- <button id="submit" type="submit"  ng-dblclick="dbClick()" ng-disabled="(!createclientform.$valid)||(flag)" class="btn btn-primary">Save</button> -->
+              <button id="submit" type="submit" ng-disabled="!createclientform.$valid" class="btn btn-primary">Save</button>
             </div>
         </fieldset>
       </form>
