--- a/app/views/clients/createorderwizard.html
+++ b/app/views/clients/createorderwizard.html
@@ -145,7 +145,8 @@
                  <a href="#/clients"><button type="reset" class="btn">Cancel</button></a>
                  <a href=""><button  class="jw-button-prev btn btn-primary" type="button" ng-show="previous" ng-click="previousStepmain()" style="display: inline-block;">Previous</button></a>
                  
-             <button type="submit" class="jw-button-next btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag" ng-show="finish">Finish</button>
+             <!-- <button type="submit" class="jw-button-next btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag" ng-show="finish">Finish</button> -->
+             <button type="submit" class="jw-button-next btn btn-primary" ng-show="finish">Finish</button>
              </div>
           </div>
             
