--- a/app/views/clients/payments.html
+++ b/app/views/clients/payments.html
@@ -216,7 +216,8 @@
   			
           <div class="offset3">
             <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
-           <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">{{'button.save'| translate}}</button>
+          <!--  <button id="submit" type="submit" class="btn btn-primary" ng-dblclick="dbClick()" ng-disabled="flag">{{'button.save'| translate}}</button> -->
+          <button id="submit" type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
           
         </fieldset>
