--- a/app/views/inventory/createmrn.html
+++ b/app/views/inventory/createmrn.html
@@ -5,7 +5,7 @@
           <li class="active">{{'label.create.new.mrn' | translate}}</li>
         </ul>
    </div>
-      <form name="createcMRNForm" novalidate="" class="form-horizontal well" rc-submit="submit()">
+      <form name="createMRNForm" novalidate="" class="form-horizontal well" rc-submit="submit()">
        <div class="error" ng-show="errorStatus || errorDetails">
 		<label>{{'label.contract.error' | translate}}</label>
 		<label ng-show="errorStatus">{{errorStatus}}</label>
