--- a/app/views/system/schedulerjobs.html
+++ b/app/views/system/schedulerjobs.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-warning" ng-click="reject()">{{'button.cancel' | translate}}</button>
-                        <button class="btn btn-primary" ng-click="accept(start.date)">{{'label.confirm' | translate}}</button>
+                        <button class="btn btn-primary" ng-click="accept(start.date)" ng-disabled="flagapprove1">{{'label.confirm' | translate}}</button>
                     </div>
       </script>
 </div>
