--- a/app/views/clients/viewstatement.html
+++ b/app/views/clients/viewstatement.html
@@ -79,7 +79,7 @@
 	    <div class="pull-right">
 	      <div class="btn-group">
 	             <a ng-show="import.processStatus != 'NEW'" ng-click="downloadFile()" class="btn btn-primary"><i class=" icon-download-alt icon-white"></i> Download Statement</a>	        
-	            <a href="#/allocatehardwareonetimesale/{{id}}/{{clientId}}"  class="btn btn-primary"><i class="icon-edit icon-white"></i>Make Payment</a>
+	            <!-- <a href="#/payments/{{clientId}}"  class="btn btn-primary"><i class="icon-edit icon-white"></i>Make Payment</a> -->
 	      </div>
 	    </div>
 	</div>
