--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -213,7 +213,7 @@
                    
                     <table class="table">
                         <tr class="graybg">
-                              <th>ID</th>
+                              <th>Order NO</th>
                             <th>Plan</th>
                             <th>Contract Period</th>
                             <th>Start Date</th>
@@ -222,7 +222,7 @@
                             <th>Status</th>
                         </tr>
                         <tr class="pointer-main" ng-repeat="order in orders | filter:filterText" >
-                          <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.id}}</td>
+                          <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.orderNo}}</td>
                           <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.planCode}}</td>
                           <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.contractPeriod}}</td>
                           <td class="pointer" data-ng-click="routeTogeneral(order.id,client.id)">{{order.startDate | DateFormat}}</td>
