--- a/app/views/organization/addressManage.html
+++ b/app/views/organization/addressManage.html
@@ -9,8 +9,9 @@
 	<div class="pull-right">
 		<a ng-show="isTreeView" ng-click="isTreeView=!isTreeView" class="btn btn-primary"><i class="icon-list icon-white"></i>List View</a>
 		<a ng-hide="isTreeView" ng-click="isTreeView=!isTreeView" class="btn btn-primary"><i class="icon-sitemap icon-white"></i>Tree View</a>
-		
+		<button ng-show="isTreeView" type="button" class="btn btn-primary" ng-click="addCountry()" ><i class="icon-plus icon-white"></i>Add Country</button>
 	</div>
+	
      <div ng-hide="isTreeView">
 		<input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by Country/State/City Name">
 		<table class="table">
@@ -32,10 +33,10 @@
 			</tbody>
 			
 		</table>
-		
 	</div>
- 
-	<div ng-show="isTreeView">
+ 	<div ng-show="isTreeView">
+ 	<br>
+ 	<!-- <button type="button" class="btn btn-primary" ng-click="addCountry()" ><i class="icon-plus icon-white"></i>Add Country</button> -->
 	  <div
 		data-angular-treeview="true"
 		data-tree-id="treeview"
@@ -44,5 +45,318 @@
 		data-node-label="name"
 		data-node-children="children" >
 		</div>
-	</div>
- </div>
+		
+  
+       <ul id="context1" class="dropdown-menu">
+            <li><a ng-click="addState()">Add State</a></li>
+            <li><a ng-click="editCountry()">Edit Country</a></li>
+            <li><a ng-click="deleteCountry()">Delete Country</a></li>
+       </ul>
+        <ul id="context2" class="dropdown-menu">
+            <li><a ng-click="addCity()">Add City</a></li>
+            <li><a ng-click="editState()">Edit State</a></li>
+            <li><a ng-click="deleteState()">Delete State</a></li>
+       </ul>
+        <ul id="context3" class="dropdown-menu">
+            <li><a ng-click="editCity()">Edit City</a></li>
+            <li><a ng-click="deleteCity()">Delete City</a></li>
+       </ul>
+    </div>
+    
+   <script type="text/ng-template" id="addCountry.html">
+        <div class="modal-header silver">
+          <h3 class="bolder">Add Country</h3>
+        </div>
+	 <form name="createcountryform" novalidate="" class="form-horizontal well" ng-submit="submit(formData.entityCode,formData.entityName)">
+        <div class="modal-body">
+ 		  <fieldset>
+           	<div class="control-group">
+				<label class="control-label" for="entityCode">Enter Country Code<span class="required">*</span> :</label>
+			 	<div class="controls">
+              		<input  type="text" name="countryCode" ng-model="formData.entityCode" placeholder="enter code here" required late-Validate/><br>
+                    <span  ng-show="createcountryform.countryCode.$invalid">
+                    	<small class="error" ng-show="createcountryform.countryCode.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	</div>
+           	</div>
+          	<div class="control-group">
+            	 <label class="control-label" for="entityName">Enter Country Name<span class="required">*</span> :</label>
+			 	 <div class="controls">
+              		<input type="text" name="countryName" ng-model="formData.entityName" placeholder="enter name here" required late-Validate/><br>
+					<span  ng-show="createcountryform.countryName.$invalid">
+                    	<small class="error" ng-show="createcountryform.countryName.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	 </div>
+	      	</div>
+		  </fieldset>
+        </div>
+        <div class="modal-footer">
+          <button id="cancel" class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+     	  <button id="submit" type="submit" class="btn btn-primary" ng-disabled="!createcountryform.$valid" >{{'label.confirm' | translate}}</button>
+        </div>
+	</form>
+    </script>
+    <script type="text/ng-template" id="editCountry.html">
+        <div class="modal-header silver">
+          <h3 class="bolder">Edit Country</h3>
+        </div>
+	<form name="editcountryform" novalidate="" class="" ng-submit="submit(formData.entityCode,formData.entityName)">
+        <div class="modal-body">
+ 		  <fieldset>
+           	<div class="control-group">
+				<label class="control-label" for="entityCode">Enter New Country Code<span class="required">*</span> :</label>
+			 	<div class="controls">
+              		<input  type="text" name="countryCode" ng-model="formData.entityCode" placeholder="enter code here" required late-Validate/><br>
+					<span  ng-show="editcountryform.countryCode.$invalid">
+                    	<small class="error" ng-show="editcountryform.countryCode.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	</div>
+           	</div>
+          	<div class="control-group">
+            	 <label class="control-label" for="entityName">Enter New Country Name<span class="required">*</span> :</label>
+			 	 <div class="controls">
+              		<input  type="text" name="countryName" ng-model="formData.entityName" placeholder="enter name here" required late-Validate/><br>
+					<span  ng-show="editcountryform.countryName.$invalid">
+                    	<small class="error" ng-show="editcountryform.countryName.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	 </div>
+	      	</div>
+		  </fieldset>
+        </div>
+        <div class="modal-footer">
+          <button id="cancel" class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+     	  <button id="submit" class="btn btn-primary" ng-disabled="!editcountryform.$valid">{{'label.confirm' | translate}}</button>
+        </div>
+	</form>
+    </script>
+    <script type="text/ng-template" id="deleteCountry.html">
+                    <div class="modal-header silver">
+                        <h3 class="bolder">Delete Country</h3>
+                    </div>
+                    <div class="modal-body" style="height:60px;">
+                       <h4>Are you sure?</h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+                        <button class="btn btn-primary" ng-click="approveDeleteCountry()">{{'label.confirm' | translate}}</button>
+                    </div>
+      </script>
+    
+    <script type="text/ng-template" id="addState.html">
+        <div class="modal-header silver">
+          <h3 class="bolder">Add State</h3>
+        </div>
+	 <form name="createstateform" novalidate="" class="form-horizontal well" ng-submit="submit(formData.entityCode,formData.entityName)">
+        <div class="modal-body">
+ 		  <fieldset>
+           	<div class="control-group">
+				<label class="control-label" for="entityCode">Enter State Code<span class="required">*</span> :</label>
+			 	<div class="controls">
+              		<input  type="text" name="stateCode" ng-model="formData.entityCode" placeholder="enter code here" required late-Validate/><br>
+					<span  ng-show="createstateform.stateCode.$invalid">
+                    	<small class="error" ng-show="createstateform.stateCode.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	</div>
+           	</div>
+          	<div class="control-group">
+            	 <label class="control-label" for="entityName">Enter State Name<span class="required">*</span> :</label>
+			 	 <div class="controls">
+              		<input  type="text" name="stateName" ng-model="formData.entityName" placeholder="enter name here" required late-Validate/><br>
+					<span  ng-show="createstateform.stateName.$invalid">
+                    	<small class="error" ng-show="createstateform.stateName.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	 </div>
+	      	</div>
+			<div class="control-group">
+				<label class="control-label" for="country">For This Country :</label>
+				<div class="controls">
+             		 <input  type="text" ng-model="nodeLabel" value={{nodeLabel}} readonly/>
+             		
+            	</div>
+	   		</div>
+		  </fieldset>
+        </div>
+        <div class="modal-footer">
+          <button id="cancel" class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+     	  <button id="submit" class="btn btn-primary" ng-disabled="!createstateform.$valid">{{'label.confirm' | translate}}</button>
+        </div>
+	</form>
+    </script>
+    <script type="text/ng-template" id="editState.html">
+        <div class="modal-header silver">
+          <h3 class="bolder">Edit State</h3>
+        </div>
+	<form name="editstateform" novalidate="" class="form-horizontal well" ng-submit="submit(formData.entityCode,formData.entityName)">
+        <div class="modal-body">
+ 		  <fieldset>
+           	<div class="control-group">
+				<label class="control-label" for="entityCode">Enter New State Code<span class="required">*</span> :</label>
+			 	<div class="controls">
+              		<input  type="text" name="stateCode" ng-model="formData.entityCode" placeholder="enter code here" required late-Validate/><br>
+					<span  ng-show="editstateform.stateCode.$invalid">
+                    	<small class="error" ng-show="editstateform.stateCode.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	</div>
+           	</div>
+          	<div class="control-group">
+            	 <label class="control-label" for="entityName">Enter New State Name<span class="required">*</span> :</label>
+			 	 <div class="controls">
+              		<input  type="text" name="stateName" ng-model="formData.entityName" placeholder="enter name here" required late-Validate/><br>
+					<span  ng-show="editstateform.stateName.$invalid">
+                    	<small class="error" ng-show="editstateform.stateName.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	 </div>
+	      	</div>
+		  </fieldset>
+        </div>
+        <div class="modal-footer">
+          <button id="cancel" class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+     	  <button id="submit" class="btn btn-primary" ng-disabled="!editstateform.$valid">{{'label.confirm' | translate}}</button>
+        </div>
+	</form>
+    </script>
+    <script type="text/ng-template" id="deleteState.html">
+                    <div class="modal-header silver">
+                        <h3 class="bolder">Delete State</h3>
+                    </div>
+                    <div class="modal-body" style="height:60px;">
+                       <h4>Are you sure?</h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+                        <button class="btn btn-primary" ng-click="approveDeleteState()">{{'label.confirm' | translate}}</button>
+                    </div>
+      </script>
+      
+     <script type="text/ng-template" id="addCity.html">
+        <div class="modal-header silver">
+          <h3 class="bolder">Add City</h3>
+        </div>
+	<form name="createcityform" novalidate="" class="form-horizontal well" ng-submit="submit(formData.entityCode,formData.entityName)">
+        <div class="modal-body">
+ 		  <fieldset>
+           	<div class="control-group">
+				<label class="control-label" for="entityCode">Enter City Code<span class="required">*</span> :</label>
+			 	<div class="controls">
+              		<input  type="text" name="cityCode" ng-model="formData.entityCode" placeholder="enter code here" required late-Validate/><br>
+					<span  ng-show="createcityform.cityCode.$invalid">
+                    	<small class="error" ng-show="createcityform.cityCode.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	</div>
+           	</div>
+          	<div class="control-group">
+            	 <label class="control-label" for="entityName">Enter City Name<span class="required">*</span> :</label>
+			 	 <div class="controls">
+              		<input  type="text" name="cityName" ng-model="formData.entityName" placeholder="enter name here" required late-Validate/><br>
+					<span  ng-show="createcityform.cityName.$invalid">
+                    	<small class="error" ng-show="createcityform.cityName.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	 </div>
+	      	</div>
+			<div class="control-group">
+				<label class="control-label" for="state">For This State :</label>
+				<div class="controls">
+             		 <input  type="text" ng-model="nodeLabel" value={{nodeLabel}} readonly/>
+            	</div>
+	   		</div>
+		  </fieldset>
+        </div>
+        <div class="modal-footer">
+          <button id="cancel" class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+     	  <button id="submit" class="btn btn-primary" ng-disabled="!createcityform.$valid">{{'label.confirm' | translate}}</button>
+        </div>
+	</form>
+    </script>
+        <script type="text/ng-template" id="editCity.html">
+        <div class="modal-header silver">
+          <h3 class="bolder">Edit City</h3>
+        </div>
+	<form name="editcityform" novalidate="" class="form-horizontal well" ng-submit="submit(formData.entityCode,formData.entityName)">
+        <div class="modal-body">
+ 		  <fieldset>
+           	<div class="control-group">
+				<label class="control-label" for="entityCode">Enter New City Code<span class="required">*</span> :</label>
+			 	<div class="controls">
+              		<input  type="text" name="cityCode" ng-model="formData.entityCode" placeholder="enter code here" required late-Validate/><br>
+					<span  ng-show="editcityform.cityCode.$invalid">
+                    	<small class="error" ng-show="editcityform.cityCode.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	</div>
+           	</div>
+          	<div class="control-group">
+            	 <label class="control-label" for="entityName">Enter New City Name<span class="required">*</span> :</label>
+			 	 <div class="controls">
+              		<input  type="text" name="cityName" ng-model="formData.entityName" placeholder="enter name here" required late-Validate/><br>
+					<span  ng-show="editcityform.cityName.$invalid">
+                    	<small class="error" ng-show="editcityform.cityName.$error.req">
+                        	Required Field
+                    	</small>
+                   </span>
+            	 </div>
+	      	</div>
+		  </fieldset>
+        </div>
+        <div class="modal-footer">
+          <button id="cancel" class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+     	  <button id="submit" class="btn btn-primary" ng-disabled="!editcityform.$valid">{{'label.confirm' | translate}}</button>
+        </div>
+	</form>
+    </script>
+    <script type="text/ng-template" id="deleteCity.html">
+                    <div class="modal-header silver">
+                        <h3 class="bolder">Delete City</h3>
+                    </div>
+                    <div class="modal-body" style="height:60px;">
+                       <h4>Are you sure?</h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-warning" ng-click="cancel()">{{'button.cancel' | translate}}</button>
+                        <button class="btn btn-primary" ng-click="approveDeleteCity()">{{'label.confirm' | translate}}</button>
+                    </div>
+      </script>
+     
+ </div> 
+    
+    
+    
+    
+    <!-- <div >
+      <span context="context2">Item three</span> 
+    </div>  -->   
+   
+    <!--  <ul id="context2" class="dropdown-menu">
+      <li><a >ADD</a></li>
+      <li><a>Edit</a></li>
+      <li><a >Delete</a></li>
+    </ul> -->
+  <!--  <div dropdown classlink="dropdownLink" linktext='treedata' classmenu="dropdownMenu">
+  <a href="http://www.google.com/">Google</a>
+  <a href="http://www.facebook.com/">Facebook</a>
+  <a href="http://www.amazon.com/">Amazon</a>
+  </div>   -->     
+          
+          
+          
+	
